--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,6 +9,7 @@ body {
   top: 0;
   left: 0;
   background: #eee;
+  overflow: scroll;
 }
 
 .site__main {
@@ -31,13 +32,49 @@ body {
 
 .beatkeeper__loop-number,
 .beatkeeper__loop-preview,
-.beatkeeper__loop-name {
+.beatkeeper__loop-name,
+.beatkeeper__loop-listen {
   display: inline-block;
 }
 
-.beatkeeper__playback-animation {
+.beatkeeper__loop-listen {
   background-color: #bbb;
-  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.beatkeeper__loop-listen:before {
+  content: "►";
+  padding-left: 0.65em;
+  line-height: 2;
+}
+
+.beatkeeper__playback-animation {
   width: 100%;
   height: 500px;
+  position: relative;
+}
+
+.beatkeeper__playback-bass,
+.beatkeeper__playback-hh,
+.beatkeeper__playback-snare {
+  position: absolute;
+}
+
+.beatkeeper__playback-bass {
+  left: 40%;
+  width: 300px;
+  height: 300px;
+  top: 100px;
+}
+
+.beatkeeper__playback-hh {
+  left: 50%;
+}
+
+.beatkeeper__playback-snare {
+  left: 30%;
+  width: 250px;
+  height: 250px;
+  top: 150px;
+
 }
