--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,9 +25,23 @@ body {
 }
 
 .beatkeeper__loop-listen {
+  border: none;
   border-radius: 100%;
   width: 30px;
   height: 30px;
+  box-shadow: #999 0px 3px 0px 0;
+  outline: none;
+}
+
+.beatkeeper__loop-listen:active {
+  box-shadow: none;
+  transform: translateY(3px);
+}
+
+.beatkeeper__loop-listen:before {
+  content: "►";
+  padding-left: 0.4em;
+  line-height: 2;
 }
 
 .beatkeeper__loop-number,
@@ -40,12 +54,6 @@ body {
 .beatkeeper__loop-listen {
   background-color: #bbb;
   cursor: pointer;
-}
-
-.beatkeeper__loop-listen:before {
-  content: "►";
-  padding-left: 0.65em;
-  line-height: 2;
 }
 
 .beatkeeper__playback-animation {
@@ -76,5 +84,26 @@ body {
   width: 250px;
   height: 250px;
   top: 150px;
+}
 
+.beatkeeper__button {
+  background: red;
+  box-shadow: #D00000 0px 3px 0px 0;
+  border: none;
+  border-radius: 2px;
+  color: white;
+  font-size: 16px;
+  padding: 1em;
+  margin: 0 0.25em;
+  margin-bottom: 1em;
+  outline: none;
+}
+
+.beatkeeper__button:hover {
+  background: #FF6C6C;
+}
+
+.beatkeeper__button:active {
+  box-shadow: none;
+  transform: translateY(3px);
 }
