--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,8 +20,8 @@ body {
   border: 1px solid #ccc;
   background: #bbb;
   display: inline-block;
-  width: 150px;
-  height: 40px;
+  width: 100px;
+  height: 35px;
 }
 
 .beatkeeper__loop-listen {
@@ -31,6 +31,9 @@ body {
   height: 30px;
   box-shadow: #999 0px 3px 0px 0;
   outline: none;
+  margin-top: 10px;
+  margin-right: 10px;
+  float: right;
 }
 
 .beatkeeper__loop-listen:active {
