--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,6 +2,11 @@ body {
   margin: 0;
 }
 
+body,
+button {
+  font-family: Futura, Verdana, sans-serif;
+}
+
 .site__sidebar {
   position: fixed;
   width: 300px;
@@ -16,12 +21,23 @@ body {
   padding-left: 300px;
 }
 
+.beatkeeper__loops {
+  padding: 0 1em;
+}
+
+.beatkeeper__loop {
+  position: relative;
+  padding: 0.25em 0;
+  padding-left: 2.5em;
+}
+
 .beatkeeper__loop-preview {
   border: 1px solid #ccc;
   background: #bbb;
   display: inline-block;
-  width: 100px;
+  width: 100%;
   height: 35px;
+  text-align: center;
 }
 
 .beatkeeper__loop-listen {
@@ -31,9 +47,11 @@ body {
   height: 30px;
   box-shadow: #999 0px 3px 0px 0;
   outline: none;
-  margin-top: 10px;
-  margin-right: 10px;
-  float: right;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
 }
 
 .beatkeeper__loop-listen:active {
@@ -42,14 +60,26 @@ body {
 }
 
 .beatkeeper__loop-listen:before {
-  content: "►";
+  content: attr(data-number) ".";
   padding-left: 0.4em;
   line-height: 2;
 }
 
-.beatkeeper__loop-number,
+.beatkeeper__loop-listen:hover:before {
+  content: "►";
+}
+
+.beatkeeper__loop-preview:before {
+  content: attr(data-name);
+  visibility: hidden;
+  line-height: 2.25;
+}
+
+.beatkeeper__loop-preview:hover:before {
+  visibility: visible;
+}
+
 .beatkeeper__loop-preview,
-.beatkeeper__loop-name,
 .beatkeeper__loop-listen {
   display: inline-block;
 }
@@ -57,6 +87,20 @@ body {
 .beatkeeper__loop-listen {
   background-color: #bbb;
   cursor: pointer;
+}
+
+.beatkeeper__playback {
+  stroke: red;
+  stroke-width: 4px;
+  fill: none;
+}
+
+.beatkeeper__instrument,
+.beatkeeper__subdivisions {
+  stroke: blue;
+  stroke-width: 2px;
+  fill: none;
+  display: none;
 }
 
 .beatkeeper__playback-animation {
