--- a/src/index.jade
+++ b/src/index.jade
@@ -16,12 +16,12 @@ html(lang="en")
       h2 Step 2: Recreate the beat
       svg.beatkeeper__notation
         g.beatkeeper__notation-container
-          pattern#hh-thumbnail(x="0" y="0" height="15" width="15")
-            image(x="0" y="0" width="15" height="15" xlink:href="src/images/snare.jpg")
-          pattern#snare-thumbnail(x="0" y="0" height="15" width="15")
-            image(x="0" y="0" width="15" height="15" xlink:href="src/images/snare.jpg")
-          pattern#kick-thumbnail(x="0" y="0" height="15" width="15")
-            image(x="0" y="0" width="15" height="15" xlink:href="src/images/snare.jpg")
+          pattern#hh-thumbnail(x="0" y="0" height="30" width="30")
+            image(x="0" y="0" width="30" height="30" xlink:href="src/images/high_hat_thumbnail.png")
+          pattern#snare-thumbnail(x="0" y="0" height="30" width="30")
+            image(x="0" y="0" width="30" height="30" xlink:href="src/images/snare_drum_thumbnail.png")
+          pattern#kick-thumbnail(x="0" y="0" height="30" width="30")
+            image(x="0" y="0" width="30" height="30" xlink:href="src/images/bass_drum_thumbnail.png")
 
           g.beatkeeper__instruments
             g.beatkeeper__instrument(transform="translate(0,40)")
