--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,14 +22,20 @@ button {
   padding-left: calc(300px + 1em);
 }
 
-.beatkeeper__loops {
+.beatkeeper__step-1 {
   padding: 0 1em;
 }
 
 .beatkeeper__loop {
   position: relative;
-  padding: 0.25em 0;
-  padding-left: 2.5em;
+  padding: 0.5em 0;
+  padding-left: 3.5em;
+  padding-right: 1em;
+}
+
+.beatkeeper__loop.active {
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 0 5px 0px;
 }
 
 .beatkeeper__loop-preview {
@@ -51,7 +57,7 @@ button {
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0;
+  left: 1em;
   margin: auto;
 }
 
@@ -90,7 +96,7 @@ button {
 }
 
 .beatkeeper__playback {
-  stroke: rgba(0, 0, 0, 0.8);
+  stroke: rgba(0, 0, 0, 0.25);
   stroke-width: 4px;
   fill: none;
 }
@@ -116,7 +122,7 @@ button {
 
 .beatkeeper__playback-animation {
   width: 100%;
-  height: 500px;
+  height: 400px;
   position: relative;
 }
 
@@ -172,6 +178,10 @@ button {
 .beatkeeper__button:active {
   box-shadow: none;
   transform: translateY(3px);
+}
+
+.beatkeeper__actions {
+  margin-top: 1.5em;
 }
 
 .beatkeeper__preview-submission,
