--- a/src/index.jade
+++ b/src/index.jade
@@ -7,13 +7,13 @@ html(lang="en")
   body
     .site__sidebar
       .beatkeeper__loops
-        h2 Step 1: Select a beat
+        h2.beatkeeper__step-1 Step 1: Select a beat
     .site__main
       .beatkeeper__playback-animation
         img.beatkeeper__playback-hh(src="src/images/high_hat.svg")
         img.beatkeeper__playback-snare(src="src/images/snare_drum.svg")
         img.beatkeeper__playback-bass(src="src/images/bass_drum.svg")
-      h2 Step 2: Recreate the beat
+      h2.beatkeeper__step-2 Step 2: Recreate the beat
       svg.beatkeeper__notation
         g.beatkeeper__notation-container
           pattern#hh-thumbnail(x="0" y="0" height="30" width="30")
