--- a/src/css/main.css
+++ b/src/css/main.css
@@ -96,7 +96,7 @@ button {
 }
 
 .beatkeeper__playback {
-  stroke: rgba(0, 0, 0, 0.25);
+  stroke: #aaa;
   stroke-width: 4px;
   fill: none;
 }
@@ -122,7 +122,7 @@ button {
 
 .beatkeeper__playback-animation {
   width: 100%;
-  height: 400px;
+  height: 350px;
   position: relative;
 }
 
