--- a/src/index.jade
+++ b/src/index.jade
@@ -2,18 +2,21 @@ doctype html
 html(lang="en")
   head
     title Beatkeeper
-    link(type="text/css" href="css/main.css")
+    link(rel="stylesheet" media="screen" href="src/css/staff.css")
+    link(rel="stylesheet" media="screen" href="src/css/loops.css")
+    link(rel="stylesheet" media="screen" href="src/css/stage.css")
+    link(rel="stylesheet" media="screen" href="src/css/buttons.css")
     link(rel="stylesheet" media="screen" href="src/css/main.css")
   body
     .site__sidebar
       .beatkeeper__loops
-        h2.beatkeeper__step-1 Step 1: Select a beat
+        h2.beatkeeper__section-header Step 1: Select a beat
     .site__main
-      .beatkeeper__playback-animation
-        img.beatkeeper__playback-hh(src="src/images/high_hat.svg")
-        img.beatkeeper__playback-snare(src="src/images/snare_drum.svg")
-        img.beatkeeper__playback-bass(src="src/images/bass_drum.svg")
-      h2.beatkeeper__step-2 Step 2: Recreate the beat
+      .beatkeeper__stage
+        img.beatkeeper__stage-hh.beatkeeper__stage-instrument(src="src/images/high_hat.svg")
+        img.beatkeeper__stage-snare.beatkeeper__stage-instrument(src="src/images/snare_drum.svg")
+        img.beatkeeper__stage-kick.beatkeeper__stage-instrument(src="src/images/bass_drum.svg")
+      h2.beatkeeper__section-header Step 2: Recreate the beat
       svg.beatkeeper__notation
         g.beatkeeper__notation-container
           pattern#hh-thumbnail(x="0" y="0" height="30" width="30")
@@ -32,8 +35,8 @@ html(lang="en")
           g.beatkeeper__playback
 
       .beatkeeper__actions
-        button.beatkeeper__button.beatkeeper__preview-submission Listen
-        button.beatkeeper__button.beatkeeper__submit Submit
-        button.beatkeeper__button.beatkeeper__try-again Try again
-        button.beatkeeper__button.beatkeeper__give-up Tell me the answer
+        button.beatkeeper__button.beatkeeper__preview-submission(m-wide) Listen
+        button.beatkeeper__button.beatkeeper__submit(s-visible m-wide) Submit
+        button.beatkeeper__button.beatkeeper__try-again(m-wide) Try again
+        button.beatkeeper__button.beatkeeper__give-up(m-wide) Tell me the answer
     script(type="text/javascript" src="dist/bundle.js" charset="utf-8")
